k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallpaper-generator
  namespace: wallpaper
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: wallpaper-generator
